<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/home_24dp"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_vehicle"
        android:enabled="true"
        android:icon="@drawable/two_wheeler_24dp"
        android:title="@string/nav_vehicle" />

    <item
        android:id="@+id/nav_history"
        android:enabled="true"
        android:icon="@drawable/history_24dp"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/account_circle_24"
        android:title="@string/nav_profile" />
</menu>